Refactored `KpsComparisonTest` to use `addHelmRepo` and ensure Helm CLI compatibility by adding repositories during tests. Added error handling for CLI operations.